--- a/src/app/components/product-list/product-list-table.component.html
+++ b/src/app/components/product-list/product-list-table.component.html
@@ -9,12 +9,12 @@
     </thead>
     <tbody>
         <tr *ngFor="let tempProduct of products">
-            <th>
+            <th class="alaign-middle">
                 <img src="{{ tempProduct.imageUrl }}" height="50" />
             </th>
-            <th>{{ tempProduct.name }}</th>
-            <th>{{ tempProduct.unitPrice | currency:'USD' }}</th>
-            <th>{{ tempProduct.unitsInStock }}</th>
+            <th class="alaign-middle">{{ tempProduct.name }}</th>
+            <th class="alaign-middle">{{ tempProduct.unitPrice | currency:'USD' }}</th>
+            <th class="alaign-middle">{{ tempProduct.unitsInStock }}</th>
         </tr>
     </tbody>
 </table>
