--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,17 +11,17 @@
       <nav class="navbar-sidebar">
         <ul class="list-unstyled navbar-list">
           <li>
-            <a href="#">Books</a>
+            <a routerLink="/category/1" routerLinkActive="active-link">Books</a>
           </li>
           <li>
-            <a href="#">Coffee Mugs</a>
+            <a routerLink="/category/2" routerLinkActive="active-link">Coffee Mugs</a>
           </li>
-          <li>
+          <!--<li>
             <a href="#">Mouse Pads</a>
           </li>
           <li>
             <a href="#">Luggage Tags</a>
-          </li>
+          </li>-->
         </ul>
       </nav>
     </div>
@@ -56,7 +56,7 @@
     <!-- END HEADER DESKTOP-->
 
     <!-- MAIN CONTENT adding reference to our product list component!-->
-    <app-product-list></app-product-list>
+    <router-outlet></router-outlet>
 
   </div>
 </div>
